# BigDataCompetition26

./: .dockerignore  .gitignore  Dockerfile  Model_V3.txt  README.md  docker-compose.yml  pyproject.toml  test.sh  train.sh
Data/: split_train_test.py
code/src/: config.py  experiment.py  features.py  metrics.py  model.py  predict.py  train.py
docs/: model_card.md  model_card_v3.md  session_handoff.md
experiments/20260531_v1_baseline/: feature_cols.json  manifest.json  notes.md  result.csv  score.csv  valid_detail.csv  valid_summary.json
experiments/20260531_v2_alpha_lgbm/: feature_cols.json  manifest.json  notes.md  result.csv  score.csv  valid_detail.csv  valid_summary.json
experiments/20260531_v3_rank_target_rolling/: feature_cols.json  manifest.json  notes.md  result.csv  rolling_detail.csv  rolling_summary.json  rolling_topk_detail.csv  score.csv  valid_detail.csv  valid_summary.json
scripts/: archive_experiment.py  update_stock_data.py
test/: score_self.py
